# efm32gg11b820

./: .gitignore  Cargo.toml  generate.sh  shell.nix
src/: acmp2.rs  can0.rs  can1.rs  cmu.rs  csen.rs  ebi.rs  emu.rs  eth.rs  etm.rs  generic.rs  gpio.rs  lcd.rs  ldma.rs  lib.rs  msc.rs  prs.rs  qspi0.rs  rtc.rs  sdio.rs  smu.rs  trng0.rs  usb.rs  vdac0.rs
src/acmp0/: ctrl.rs  extifctrl.rs  mod.rs  routeloc0.rs
src/acmp1/: extifctrl.rs  inputsel.rs
src/acmp2/: hysteresis0.rs  hysteresis1.rs  routeloc0.rs  routepen.rs
src/acmp3/: hysteresis0.rs  hysteresis1.rs  ien.rs
src/adc0/: biasprog.rs  cal.rs  ctrl.rs  mod.rs  scanctrl.rs  scanctrlx.rs  scaninputsel.rs  singlectrl.rs  singlectrlx.rs  singledata.rs  status.rs
src/adc1/: aportmasterdis.rs  cmpthr.rs  scanctrl.rs  scanctrlx.rs  scandataxp.rs  scannegsel.rs  singlectrlx.rs  singlefifocount.rs
src/can0/: bittiming.rs  ctrl.rs  if0if.rs  if1if.rs  if1ifs.rs  intid.rs  mir0_datal.rs  mir0_mask.rs  mir1_arb.rs  mir1_ctrl.rs  mir1_datal.rs  route.rs  test.rs
src/can1/: errcnt.rs  if1ifc.rs  messagestate.rs  mir0_arb.rs  mir0_ctrl.rs  mir1_mask.rs  mod.rs  status.rs  test.rs  transreq.rs
src/cmu/: adcctrl.rs  auxhfrcoctrl.rs  calctrl.rs  cmd.rs  ctrl.rs  dbgclksel.rs  dpllctrl.rs  dpllctrl1.rs  hfbusclken0.rs  hfbuspresc.rs  hfclksel.rs  hfclkstatus.rs  hfcorepresc.rs  hfexppresc.rs  hfperclken0.rs  hfperclken1.rs  hfperpresc.rs  hfperprescb.rs  hfperprescc.rs  hfpresc.rs  hfrcoctrl.rs  hfxoctrl.rs  hfxoctrl1.rs  hfxotimeoutctrl.rs  ien.rs  if_.rs  ifc.rs  lfaclksel.rs  lfapresc0.rs  lfbclken0.rs  mod.rs  (+18 more)
(+2415 files in other folders)
